# finsight-multi-agent

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  PUBLICATION.md  README.md  docker-compose.yml  sample_financial.docx  sample_financial_report.docx
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_users.py  0003_topics.py  0004_user_tier.py  0005_message_charts.py  0006_message_tools.py
backend/app/: main.py
backend/app/agents/: graph.py  mcp_web.py  nodes.py  prompts.py  state.py  web.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: auth.py  conversations.py  documents.py  health.py  qa.py  skills.py  tasks.py  topics.py  ws.py
backend/app/core/: cache.py  checkpointer.py  config.py  db.py  email.py  llm.py  logging.py  qdrant.py  queue.py  security.py
backend/app/models/: __init__.py  base.py  chunk.py  conversation.py  document.py  task.py  topic.py  user.py
backend/app/rag/: ports.py
backend/app/rag/chunking/: contextualizer.py  models.py  pipeline.py  semantic.py  splitter.py
backend/app/rag/indexing/: indexer.py  qdrant_store.py
backend/app/rag/ingestion/: parsers.py  storage.py
backend/app/rag/retrieval/: citation.py  fusion.py  hybrid.py  models.py  qdrant_backend.py
backend/app/repositories/: base.py  conversation_repository.py  document_repository.py  task_repository.py  topic_repository.py  user_repository.py
backend/app/schemas/: auth.py  conversation.py  document.py  health.py  qa.py  skill.py  task.py  topic.py
backend/app/services/: agent_service.py  auth_service.py  events.py  ingestion_service.py  qa_service.py  streaming_chat_service.py  topic_service.py  visualization_service.py
backend/app/skills/: base.py  library.py
backend/app/tools/: base.py
backend/app/workers/: settings.py  tasks.py
backend/evals/: dataset.py  evaluators.py  run_eval.py
backend/mcp_server/: server.py  tools.py
backend/tests/: conftest.py  test_agents.py  test_chunking.py  test_evaluators.py  test_health.py  test_hybrid.py  test_mcp_tools.py  test_retrieval.py  test_security.py  test_semantic.py  test_skills.py
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: client.ts
frontend/src/components/: AuthShell.tsx  Chart.tsx  ChatView.tsx  GoogleSignIn.tsx  Logo.tsx  Markdown.tsx  ProfileModal.tsx  ProtectedRoute.tsx  Sidebar.tsx  ThemeToggle.tsx  TierBadge.tsx  TopicsManager.tsx  UsageBar.tsx  ui.tsx
(+9 files in other folders)
