[project]
name = "finsight"
version = "0.1.0"
description = "FinSight — Multi-Agent Financial Research Assistant (Ready Tensor AAIDC Module 2)"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    # API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "websockets>=13.1",
    # Orchestration / LLM
    "langgraph>=0.2.45",
    "langchain>=0.3.7",
    "langchain-core>=0.3.15",
    "langchain-google-genai>=2.0.4",
    "langsmith>=0.1.140",
    "mcp>=1.0.0",
    "ddgs>=6.0",
    # Persistence
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "psycopg-pool>=3.2",
    "langgraph-checkpoint-postgres>=2.0.1",
    "alembic>=1.14",
    # Vector database
    "qdrant-client>=1.12",
    # Cache / queue
    "redis>=5.2",
    "arq>=0.26",
    # RAG / ingestion (lightweight, Windows-friendly)
    "pymupdf>=1.24",          # PDF text + images + layout
    "pdfplumber>=0.11",       # table extraction
    "python-docx>=1.1",       # DOCX
    "pillow>=11.0",           # image handling for OCR
    "pytesseract>=0.3.13",    # OCR (requires Tesseract binary; Cloudinary OCR as fallback)
    "cloudinary>=1.41",
    # Utils
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.3",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*", "mcp_server*"]

# ----------------------------------------------------------------------------
# Ruff — lint + format
# ----------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"
src = ["app", "mcp_server", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "C4",  # comprehensions
    "SIM", # simplify
    "TID", # tidy imports
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["app", "mcp_server"]

[tool.ruff.format]
quote-style = "double"

# ----------------------------------------------------------------------------
# Pytest
# ----------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --strict-markers"
